--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
-    <meta charset=«  utf-8 »/>
-    <link rel="stylesheet" href="portfolio.css">
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=El+Messiri&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
 
@@ -32,6 +29,10 @@
         </nav>
     </header>
 
+
+
+
+
     <main>
 
 
@@ -53,10 +54,7 @@
 
             <article class="mylife">
 
-                <p>Bonjour, je m'appelle Alicia. Je suis une étudiante de 24ans en développement web. Bienvenue dans mon monde!!</p>
-                <img src="image/me.jpg" alt="me" width="200px" height="200px">
-                <p>Hi, my name is Alicia. I'm a 24years student in web developping. Welcome to my Portfolio and my work!!</p>
-
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit cum unde fuga! Ullam, autem! Distinctio sint provident nemo excepturi iure ipsum quos est quam! Nobis earum atque sed tempora quia.</p>
             </article>
 
         </section>
@@ -65,25 +63,25 @@
         <!--Mes compétences-->
         <section id="Skills">
 
-            <h2>Mes Skills</h2>
+            <h2>Mes compétences</h2>
 
             <section class="skills">
 
                 <section class="skill1">
                     <figure>
-                        <img src="image/css3-logo.png" alt="css3" width="200px" height="220px">
+                        <img src="image/css3-logo.png" alt="css3" width="100px" height="120px">
                     </figure>
                 </section>
 
                 <section class="skill2">
                     <figure>
-                        <img src="image/html5.png" alt="html5" width="200px" height="210px">
+                        <img src="image/html5.png" alt="html5" width="100px" height="110px">
                     </figure>
                 </section>
 
                 <section class="skill3">
                     <figure>
-                        <img src="image/github.svg" alt="github" width="200px" height="200px">
+                        <img src="image/github.svg" alt="github" width="100px" height="100px">
                     </figure>
                 </section>
 
@@ -203,7 +201,6 @@
 
 
     </footer>
-
 
 
 
