--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 
 
     <main>
-        <h1>Mon Portfolio</h1>
+
 
         <!--PARTIES-->
         <section class="references">
@@ -50,45 +50,52 @@
 
 
         <!--Moi-->
-        <section id="me">
-            <h2>Me, Myself and I</h2>
+        <section class="myself">
 
-            <article class="mylife">
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit cum unde fuga! Ullam, autem! Distinctio sint provident nemo excepturi iure ipsum quos est quam! Nobis earum atque sed tempora quia.</p>
-            </article>
-
-        </section>
+            <h1>Mon Portfolio</h1>
 
 
-        <!--Mes compétences-->
-        <section id="Skills">
+            <section id="me">
+                <h2>Me, Myself and I</h2>
 
-            <h2>Mes compétences</h2>
+                <article class="mylife">
+                    <img src="image/me.jpeg" alt="me" width="200px" height="200px">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit cum unde fuga! Ullam, autem! Distinctio sint provident nemo excepturi iure ipsum quos est quam! Nobis earum atque sed tempora quia.</p>
+                </article>
 
-            <section class="skills">
+            </section>
 
-                <section class="skill1">
-                    <figure>
-                        <img src="image/css3-logo.png" alt="css3" width="100px" height="120px">
-                    </figure>
-                </section>
 
-                <section class="skill2">
-                    <figure>
-                        <img src="image/html5.png" alt="html5" width="100px" height="110px">
-                    </figure>
-                </section>
+            <!--Mes compétences-->
+            <section id="Skills">
 
-                <section class="skill3">
-                    <figure>
-                        <img src="image/github.svg" alt="github" width="100px" height="100px">
-                    </figure>
-                </section>
-                <section class="skill4">
-                    <figure>
-                        <img src="image/php.png" alt="php" width="100px" height="100px">
-                    </figure>
+                <h2>Mes compétences</h2>
+
+                <section class="skills">
+
+                    <section class="skill1">
+                        <figure>
+                            <img src="image/css3-logo.png" alt="css3" width="100px" height="120px">
+                        </figure>
+                    </section>
+
+                    <section class="skill2">
+                        <figure>
+                            <img src="image/html5.png" alt="html5" width="100px" height="110px">
+                        </figure>
+                    </section>
+
+                    <section class="skill3">
+                        <figure>
+                            <img src="image/github.svg" alt="github" width="100px" height="100px">
+                        </figure>
+                    </section>
+                    <section class="skill4">
+                        <figure>
+                            <img src="image/php.png" alt="php" width="100px" height="100px">
+                        </figure>
+                    </section>
+
                 </section>
 
             </section>
@@ -184,15 +191,6 @@
 
             <h3>Si mon portfolio vous a intéressé, n'hésitez pas à me contacter!</h3>
 
-        </section>
-
-
-
-
-
-        <!--COLLAGE FIN-->
-        <section>
-            <img src="image/FotoJet.jpg" alt="collage" width="1440px" height="1200px">
         </section>
 
 
