--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
 <body class="index">
 
 <main>
+    <section>DESSIN QUI BOUGE VAGUE</section>
+    <section>TEXTE QUI S'AFFICHE</section>
+    <p>WELCOME</p>
+    <p>WE HOPE YOU ENJOU YOU'RE STAY</p>
+    <p>CLICK AROUND AND LEARN MORE</p>
+
+
     <section class="intro">
    <a href="pages/portfolio.php"><h1>BIENVENUE </h1>
     <h1>DANS</h1>
     <h1>MON</h1>
        <h1>PORTFOLIO</h1></a>
     </section>
+
+    <section>dessin lettre et reprise de la vague qui bouge !</section>
 
 </main>
 
