--- a/index.html
+++ b/index.html
@@ -1,37 +1,92 @@
-<!DOCTYPE html>
-<html lang="fr">
+<?php
+
+
+$title = "Portfolio";
+$bodyname = "portfolio";
+
+session_start();
+
+?>
+
+
+<!--------------------------------HEADER---------------------------->
+<!doctype html>
+<html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Inconsolata&display=swap" rel="stylesheet">
+    <link rel= "stylesheet" type="text/css" href= "index.css">
+    <link rel= "stylesheet" type="text/css" href= "./style/footer.css">
+
+    <title> <?= $title ?> - Alicia Cordial</title>
+
+    <script>
+        function changeColor(color) {
+            document.body.style.background = color;
+        }
+    </script>
+
 </head>
 
-<body class="index">
+
+<body>
 
 <main>
-    <section>DESSIN QUI BOUGE VAGUE</section>
-    <section>TEXTE QUI S'AFFICHE</section>
-    <p>WELCOME</p>
-    <p>WE HOPE YOU ENJOU YOU'RE STAY</p>
-    <p>CLICK AROUND AND LEARN MORE</p>
 
-
-    <section class="intro">
-   <a href="pages/portfolio.php"><h1>BIENVENUE </h1>
-    <h1>DANS</h1>
-    <h1>MON</h1>
-       <h1>PORTFOLIO</h1></a>
+    <article>
+    <section class="background_change">
+        <p><b>Change the background depending on your mood</b></p>
+        <section class="btn">
+            <button class="blue" onclick = "changeColor('lightskyblue');">Butterfly Paradise</button>
+            <button class="red" onclick = "changeColor('lightcoral');">Mother Nature</button>
+            <button class="yellow"  onclick = "changeColor('yellow');">Summer Vibes</button>
+            <button class="pink" onclick = "changeColor('pink');">Unicorn Universe</button>
+            <button class="green" onclick = "changeColor('chartreuse');">Green Wonderland</button>
+            <button class="orange" onclick = "changeColor('orange');">Automn Pumpkins</button>
+            <button class="gray" onclick = "changeColor('slategray');">Nightsky Mood</button>
+            <button class="mint" onclick = "changeColor('honeydew');">Mint Ice Cream</button>
+            <button class="lavender" onclick = "changeColor('lavender');">Lavender field </button>
+            <button class="fuchsia" onclick = "changeColor('fuchsia');">Britney Bitch </button>
+        </section>
     </section>
 
-    <section>dessin lettre et reprise de la vague qui bouge !</section>
+<h1>BIENVENUE DANS MON PORTFOLIO</h1>
+
+    <div class="text-box">
+
+        <p>Hello,</p>
+        <p>Interested?</p>
+        <p>Come here to see my projects!</p>
+
+    </div>
+        </article>
+
 
 </main>
 
+<footer>
+    <article class="footerinfos">
+
+        <section class="imgsocial">
+            <a href="https://www.linkedin.com/in/alicia-cordial-0538b8205/"><img src="./image/icons8-linkedin-26.png" alt="linkedin"/></a>
+            <a href="https://github.com/alicia-cordial/"><img src="./image/icons8-github-30.png" alt="github"/></a>
+        </section>
 
 
-<script type="text/javascript" src="script.js"></script>
+        <section class="production">
+            <p>Alicia Cordial</p>
+            <p>School : LaPlateforme_ Marseille</p>
+            <p>alicia.cordial@laplateforme.io</p>
+        </section>
+
+    </article>
+</footer>
+
 
 </body>
 
