--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<?php
-
-
-$title = "Portfolio";
-$bodyname = "portfolio";
-
-session_start();
-
-?>
 
 
 <!--------------------------------HEADER---------------------------->
@@ -23,7 +14,7 @@ session_start();
     <link rel= "stylesheet" type="text/css" href= "index.css">
     <link rel= "stylesheet" type="text/css" href= "./style/footer.css">
 
-    <title> <?= $title ?> - Alicia Cordial</title>
+    <title> Accueil Portfolio - Alicia Cordial</title>
 
     <script>
         function changeColor(color) {
@@ -38,7 +29,6 @@ session_start();
 
 <main>
 
-    <article>
     <section class="background_change">
         <p><b>Change the background depending on your mood</b></p>
         <section class="btn">
@@ -55,16 +45,19 @@ session_start();
         </section>
     </section>
 
-<h1>BIENVENUE DANS MON PORTFOLIO</h1>
+    <article class="bienvenue">
 
-    <div class="text-box">
+        <a href="./pages/portfolio.php"><h1>BIENVENUE DANS MON PORTFOLIO</h1></a>
 
-        <p>Hello,</p>
-        <p>Interested?</p>
-        <p>Come here to see my projects!</p>
+        <div class="text-box">
+            <a href="./pages/portfolio.php">
+            <p>Hello there, Are you interested?</p>
+            <p>Come here to see my portfolio</p></a>
 
-    </div>
-        </article>
+        </div>
+    </article>
+
+
 
 
 </main>
